Pagina Home Criada

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #eee;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 400px;
+  text-align: center;
+  padding: .5rem;
+}
