Criado o componente Quiz-info

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="tela">
+  <app-btn-home *ngIf="router.url !== '/'" class="home-icon"></app-btn-home>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
