--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -3,7 +3,9 @@
     <img src="../../assets/logo.jpg" alt="QuizMaker Logo" />
   </div>
   <div class="btns d-grid gap-2 col-5 mx-auto">
-    <button type="button" class="btn btn-warning">Instruções</button>
+    <button type="button" class="btn btn-warning" routerLink="info">
+      Instruções
+    </button>
     <button type="button" class="btn btn-dark">Quizzes</button>
   </div>
   <footer class="copyright">
