--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -7,3 +7,10 @@
   position: relative;
   justify-content: center;
 }
+
+.home-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 1.5rem;
+}
