Criado componente Quiz-form

--- a/frontend/src/app/quiz/quiz-list/quiz-list.component.html
+++ b/frontend/src/app/quiz/quiz-list/quiz-list.component.html
@@ -36,4 +36,11 @@
   </div>
   <!-- Spinner -->
 </div>
-<button type="button" *ngIf="quizzes" class="btn btn-dark">Criar Quiz</button>
+<button
+  type="button"
+  *ngIf="quizzes"
+  class="btn btn-dark"
+  (click)="openQuizForm()"
+>
+  Criar Quiz
+</button>
