--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -6,9 +6,7 @@
     <button type="button" class="btn btn-warning" routerLink="info">
       Instruções
     </button>
-    <button type="button" class="btn btn-dark" routerLink="list">
-      Quizzes
-    </button>
+    <button type="button" class="btn btn-dark" routerLink="list">Jogar</button>
   </div>
   <footer class="copyright">
     Desenvolvido por
